// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard renders At Risk 1`] = `
<div
  className="kpi-card kpi-card--at-risk"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <Memo(PropertyStatus)
      performance_rating={1}
    />
  </div>
  <div
    className="kpi-card__value"
  >
    23%
  </div>
  <div
    className="kpi-card__name"
  >
    INQ → TOU
  </div>
  <div
    className="kpi-card__target"
  >
    <span>
      Target: 
      40%
      <Connect(InfoTooltipBase) />
    </span>
  </div>
</div>
`;

exports[`KPICard renders NoTargetKPICard 1`] = `
<div
  className="kpi-card kpi-card--no-data kpi-card--no-target"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__no-data"
  >
    No Data
  </div>
  <div
    className="kpi-card__value"
  >
    66%
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
  <div
    className="kpi-card__alarm"
  >
    <RMBTooltip
      overlay={
        <div
          className="kpi-card__alarm-text"
        >
          No targets found for this reporting period.
        </div>
      }
      placement="bottom"
      theme="light-dark"
    >
      <div
        className="kpi-card__alarm-icon-wrap"
      >
        <Alarm
          className="kpi-card__alarm-icon"
        />
      </div>
    </RMBTooltip>
  </div>
</div>
`;

exports[`KPICard renders NoValueKPICard 1`] = `
<div
  className="kpi-card kpi-card--no-data kpi-card--no-value"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__no-data"
  >
    No Data
  </div>
  <div
    className="kpi-card__alarm"
  >
    <RMBTooltip
      overlay={
        <div
          className="kpi-card__alarm-text"
        >
          No data found for this reporting period.
        </div>
      }
      placement="top"
      theme="light-dark"
    >
      <div
        className="kpi-card__alarm-icon-wrap"
      >
        <Alarm
          className="kpi-card__alarm-icon"
        />
      </div>
    </RMBTooltip>
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
</div>
`;

exports[`KPICard renders Off Track 1`] = `
<div
  className="kpi-card kpi-card--off-track"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <Memo(PropertyStatus)
      performance_rating={0}
    />
  </div>
  <div
    className="kpi-card__value"
  >
    33%
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
  <div
    className="kpi-card__target"
  >
    <span>
      Target: 
      66%
      <Connect(InfoTooltipBase) />
    </span>
  </div>
</div>
`;

exports[`KPICard renders On Track 1`] = `
<div
  className="kpi-card kpi-card--on-track"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <Memo(PropertyStatus)
      performance_rating={2}
    />
  </div>
  <div
    className="kpi-card__value"
  >
    5%
  </div>
  <div
    className="kpi-card__name"
  >
    USV → INQ
  </div>
  <div
    className="kpi-card__target"
  >
    <span>
      Target: 
      6%
      <Connect(InfoTooltipBase) />
    </span>
  </div>
</div>
`;
